--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0",
+    "recharts": "^2.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
